connect project 12 from github

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <div class="gallery-flex left item">
       <div class="gallery">
         <div class="card" style="width: 18rem;">
-          <img src="Media/karma-dog.png" class="card-img-top" alt="My favorite dog">
+          <img src="project12screenshot.png" class="card-img-top" alt="Fitness Quiz">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Fitness Knowledge</h5>
+            <p class="card-text">My favorite exercise</p>
+            <a href="https://jamiecodio.github.io/fitness-quiz/" class="btn btn-primary">Fitness App Live Demo</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
