Added mini calculator project card

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
+          <img src="mini-calculator.png" class="card-img-top" alt="Mini Calculator">
+          <div class="card-body">
+            <h5 class="card-title">Mini Calculator</h5>
+            <p class="card-text">Javascript Calculator</p>
+            <a href="https://jamiecodio.github.io/mini-calculator/" class="btn btn-primary">Calculator App</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
           <img src="Media/tasty-town.png" class="card-img-top" alt="An ad for Tasty Town">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
