--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="James Salem's website">
   <meta name="keywords" content="James Salem portfolio">
-  <title> Project 10</title>
+  <title> Project 14 Pushed From Project 11 Codio</title>
   <link href="https://fonts.googleapis.com/css2?family=REM&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -54,8 +54,8 @@
       </article>
     </section>
     <!-- PREVIOUS PROJECT ELEMENTS -->
-    
     <div class="gallery-flex left item">
+      <h2 class="showcase-title"> Projects</h2>
       <div class="gallery">
         <div class="card" style="width: 18rem;">
           <img src="project12screenshot.png" class="card-img-top" alt="Fitness Quiz">
@@ -89,13 +89,6 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-        <div class="thumbnail" id="nonprofit"> </div>
-      <div class="thumbnail" id="digital-marketing"> </div>
-      <div class="thumbnail" id="amazon"> </div>
-      </div>
-    </div>
-    <div class="gallery-flex right item">
-      <div class="gallery">
         <div class="card" style="width: 18rem;">
           <img src="Media/karma-dog.png" class="card-img-top" alt="My favorite dog">
           <div class="card-body">
@@ -104,55 +97,80 @@
             <a href="https://github.com/Jamiecodio/project-5" class="btn btn-primary">View on Github</a>
           </div>
         </div>
-        <div class="thumbnail" id="nonprofit"> </div>
+        <div class="card" style="width: 18rem;">
+          <img src="Media/karma-dog.png" class="card-img-top" alt="My favorite dog">
+          <div class="card-body">
+            <h5 class="card-title">Project 5</h5>
+            <p class="card-text">Some lessons on Github and how to navigate code.</p>
+            <a href="https://github.com/Jamiecodio/project-5" class="btn btn-primary">View on Github</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="Media/karma-dog.png" class="card-img-top" alt="My favorite dog">
+          <div class="card-body">
+            <h5 class="card-title">Project 5</h5>
+            <p class="card-text">Some lessons on Github and how to navigate code.</p>
+            <a href="https://github.com/Jamiecodio/project-5" class="btn btn-primary">View on Github</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="Media/karma-dog.png" class="card-img-top" alt="My favorite dog">
+          <div class="card-body">
+            <h5 class="card-title">Project 5</h5>
+            <p class="card-text">Some lessons on Github and how to navigate code.</p>
+            <a href="https://github.com/Jamiecodio/project-5" class="btn btn-primary">View on Github</a>
+          </div>
+        </div>
+        <!-- PREVIOUS PROJECT ELEMENTS  -->
+        <!-- <div class="thumbnail" id="nonprofit"> </div>
       <div class="thumbnail" id="digital-marketing"> </div>
-      <div class="thumbnail" id="amazon"> </div>
+      <div class="thumbnail" id="amazon"> </div> -->
       </div>
     </div>
   </div>
-
-    <footer>
-      <div class="container footer-main">
-        <div id="form-submitted-msg">Form successfully submitted!</div>
-        <form id="contactForm" novalidate>
-          <span class="form-heading">Enter Your Info to Get in Touch</span>
-          <div class="form-container">
-            <div class="input-group">
-              <label for="firstname" class="form-label">First name: </label>
-              <input type="text" id="firstname" name="first-name" class="form-control" required>
-              <small class="error-msg invalid-feedback">Required</small>
-            </div>
-            <div class="input-group">
-              <label for="lastname" class="form-label">Last name: </label>
-              <input type="text" id="lastname" name="last-name" class="form-control" required>
-              <small class="error-msg invalid-feedback">Required</small>
-            </div>
-            <div class="input-group">
-              <label for="email" class="form-label">Email: </label>
-              <input type="email" id="email" name="email" class="form-control" required>
-              <small class="error-msg invalid-feedback">Required</small>
-            </div>
-            <div class="input-group">
-              <label for="telephone" class="form-label">Telephone: </label>
-              <input type="tel" id="telephone" name="telephone" class="form-control" required>
-              <small class="error-msg invalid-feedback">Required</small>
-            </div>
+  <footer>
+    <div class="container footer-main">
+      <div id="form-submitted-msg">Form successfully submitted!</div>
+      <form id="contactForm" novalidate>
+        <span class="form-heading">Enter Your Info to Get in Touch</span>
+        <div class="form-container">
+          <div class="input-group">
+            <label for="firstname" class="form-label">First name: </label>
+            <input type="text" id="firstname" name="first-name" class="form-control" required>
+            <small class="error-msg invalid-feedback">Required</small>
           </div>
-          <!-- PROJECT 11 BUTTONS -->
-          <div class="form-btns">
-            <button type="submit" class="btn btn-primary submit" disabled>CONTACT ME</button>
-            <button type="reset" class="btn btn-secondary">CLEAR FORM</button>
+          <div class="input-group">
+            <label for="lastname" class="form-label">Last name: </label>
+            <input type="text" id="lastname" name="last-name" class="form-control" required>
+            <small class="error-msg invalid-feedback">Required</small>
           </div>
-        </form>
+          <div class="input-group">
+            <label for="email" class="form-label">Email: </label>
+            <input type="email" id="email" name="email" class="form-control" required>
+            <small class="error-msg invalid-feedback">Required</small>
+          </div>
+          <div class="input-group">
+            <label for="telephone" class="form-label">Telephone: </label>
+            <input type="tel" id="telephone" name="telephone" class="form-control" required>
+            <small class="error-msg invalid-feedback">Required</small>
+          </div>
+        </div>
+        <!-- PROJECT 11 BUTTONS -->
+        <div class="form-btns">
+          <button type="submit" class="btn btn-primary submit" disabled>CONTACT ME</button>
+          <button type="reset" class="btn btn-secondary">CLEAR FORM</button>
+        </div>
+      </form>
+      <div id="json-display">
+        JSON DISPLAY 
       </div>
-
-      <div class="copyright"> James Salem &copy; 2023 </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-
-    <!-- PROJECT 10 JAVASCRIPT -->
-    <!-- <script src="../Javascript/fadescroll.js"></script> -->
+    </div>
+    <div class="copyright"> James Salem &copy; 2023 </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+  <!-- PROJECT 10 JAVASCRIPT -->
+  <!-- <script src="../Javascript/fadescroll.js"></script> -->
 </body>
 
 </html>
